[package]
name = "sycamore-state"
version = "0.0.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore-state-macros = { path = "./sycamore-state-macros" }
sycamore-state-core = { path = "./sycamore-state-core" }

sycamore = { version = "0.9.0-beta.1", features = [
    "suspense",
], git = "https://github.com/sycamore-rs/sycamore.git" }
