[package]
name = "sycamore-state-manager"
categories = ["gui", "wasm", "web-programming"]
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Derive macro for state management for the sycamore reactive ecosystem"
readme = "./README.md"
keywords = ["wasm", "gui", "reactive", "sycamore", "macro"]
homepage = "https://github.com/ChristianBelloni/sycamore-state"
repository = "https://github.com/ChristianBelloni/sycamore-state"

[dependencies]
sycamore-state-macros = { path = "./sycamore-state-macros", version = "0.0.2" }
sycamore-state-core = { path = "./sycamore-state-core", version = "0.0.2" }
sycamore = "0.9.0-beta.1"

[package.metadata.docs.rs]
all-features = true
default-target = "wasm32-unknown-unknown"
