[package]
name = "inner_macros"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
inner = { git = "https://github.com/ChristianBelloni/sycamore-state.git" }
syn = { version = "2.0.15", features = ["full", "extra-traits"] }
quote = "1.0.26"
proc-macro2 = "1.0.56"
lazy_static = "*"
