[package]
name = "sycamore-state-core"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "sycamore-state core types and trait definitions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { version = "0.9.0-beta.1", features = [
    "suspense",
], git = "https://github.com/sycamore-rs/sycamore.git" }
