[package]
name = "sycamore-state-macros"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
sycamore-state-core = { path = "../sycamore-state-core" }
syn = { version = "2.0.15", features = ["full", "extra-traits"] }
quote = "1.0.26"
proc-macro2 = "1.0.56"
lazy_static = "*"
