[package]
name = "sycamore-state-macros"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "sycamore-state proc macro implementation"

[lib]
proc-macro = true

[dependencies]
sycamore-state-core = { path = "../sycamore-state-core", version = "0.0.1" }
syn = { version = "2.0.15", features = ["full", "extra-traits"] }
quote = "1.0.26"
proc-macro2 = "1.0.56"
